# BIOTP

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  justfile  rfc-biotp.txt
HumanCheck/: ContentView.swift
HumanCheck.xcodeproj/: project.pbxproj
HumanCheck.xcodeproj/xcuserdata/ps.xcuserdatad/xcschemes/: xcschememanagement.plist
HumanCheckTests/: HumanCheckTests.swift
HumanCheckUITests/: HumanCheckUITestsLaunchTests.swift
app/android/: settings.gradle.kts
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/res/values/: strings.xml  themes.xml
app/ios/HumanCheck/: ContentView.swift  HumanCheckApp.swift  Info.plist  KeychainManager.swift  QRScannerView.swift
app/ios/HumanCheck.xcodeproj/: project.pbxproj
app/ios/HumanCheckTests/: HumanCheckTests.swift
app/ios/HumanCheckUITests/: HumanCheckUITests.swift
lib/biotp-kotlin/: build.gradle.kts  settings.gradle.kts
lib/biotp-py/: pyproject.toml
lib/biotp-py/biotp/: __init__.py  android_attest.py  app_attest.py  ecdh_totp.py
lib/biotp-swift/: Package.swift
lib/biotp-swift/Sources/BIOTP/: BIOTPError.swift  DataHex.swift  OTPGenerator.swift  P256Math.swift
lib/biotp-ts/: package-lock.json  package.json
lib/biotp-ts/src/: android_attest.ts  app_attest.ts  ecdh_totp.ts  index.ts  x509.ts
server/: requirements.txt  server.py
server-ts/: package-lock.json  package.json  tsconfig.json
server-ts/src/: db.ts  server.ts
server-ts/static/: how-it-works.html  index.html
server/static/: index.html
(+10 files in other folders)
