[project]
name = "biotp"
version = "0.1.0"
description = "ECDH-TOTP: Elliptic Curve Diffie-Hellman Time-Based One-Time Passwords"
requires-python = ">=3.10"
dependencies = [
    "cryptography",
    "cbor2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["biotp"]
